--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>2.6.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
