--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=${PORT:8080}
 spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/todos}
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+app.jwt.secret=${JWT_SECRET:geheim}
